...
        }
      }
    },
    "Cached files" : {

    },
    "Calm" : {
      "extractionState" : "stale",
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "平静"
...
    "Default speed" : {

    },
    "Delay %@s" : {

    },
    "Delete" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "删除"
          }
...
            "state" : "translated",
            "value" : "已關閉。"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "完成"
          }
...
    "Earned %lld medicine" : {

    },
    "Earns %lld gold" : {

    },
    "Edit" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "编辑"
          }
...
            "state" : "translated",
            "value" : "MP4 會使用此背景。動態 PNG 和系統貼圖匯出檔案仍保持透明。"
          }
        }
      }
    },
    "Multiple" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "多个"
          }
...
            "state" : "translated",
            "value" : "貼圖附件"
          }
        }
      }
    },
    "Sticker Controls" : {
      "localizations" : {
        "zh-CN" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "贴纸控制"
          }
...
